--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         .article-card a {
             display: inline-block;
             margin-top: 10px;
-            color: #25D366;
+            color: #ffde59;
             font-weight: bold;
             text-decoration: none;
         }
