--- a/index.html
+++ b/index.html
@@ -198,49 +198,81 @@
 
             <!-- Altri articoli segnaposto -->
             <div class="article-card">
-                <img src="https://via.placeholder.com/300x200" alt="Titolo articolo">
+                <img
+  src="assets/images/posts/da-cattivo-pagatore-a-cliente-affidabile.png"
+  alt="Da cattivo pagatore a cliente affidabile - guida passo passo"
+  width="300" height="200"
+  loading="lazy" decoding="async">
                 <h3>Come Ottenere la Cancellazione dalla Centrale Rischi</h3>
                 <p>Centrale Rischi della Banca d'Italia raccoglie informazioni sui rapporti creditizi di imprese e privati.</p>
                 <a href="cancellazione-centrale-rischi">Leggi l'articolo</a>
             </div>
             <div class="article-card">
-                <img src="https://via.placeholder.com/300x200" alt="Titolo articolo">
+                <img
+  src="assets/images/posts/da-cattivo-pagatore-a-cliente-affidabile.png"
+  alt="Da cattivo pagatore a cliente affidabile - guida passo passo"
+  width="300" height="200"
+  loading="lazy" decoding="async">
                 <h3>Titolo articolo 3</h3>
                 <p>Breve descrizione dell'articolo 3. Approfondisci il tema cliccando sul link.</p>
                 <a href="cancellare-segnalazione-crif">Leggi l'articolo</a>
             </div>
             <div class="article-card">
-                <img src="https://via.placeholder.com/300x200" alt="Titolo articolo">
+                <img
+  src="assets/images/posts/da-cattivo-pagatore-a-cliente-affidabile.png"
+  alt="Da cattivo pagatore a cliente affidabile - guida passo passo"
+  width="300" height="200"
+  loading="lazy" decoding="async">
                 <h3>Titolo articolo 4</h3>
                 <p>Breve descrizione dell'articolo 4. Approfondisci il tema cliccando sul link.</p>
                 <a href="reclamo-banca-segnalazione-crif">Leggi l'articolo</a>
             </div>
             <div class="article-card">
-                <img src="https://via.placeholder.com/300x200" alt="Titolo articolo">
+                <img
+  src="assets/images/posts/da-cattivo-pagatore-a-cliente-affidabile.png"
+  alt="Da cattivo pagatore a cliente affidabile - guida passo passo"
+  width="300" height="200"
+  loading="lazy" decoding="async">
                 <h3>Titolo articolo 5</h3>
                 <p>Breve descrizione dell'articolo 5. Approfondisci il tema cliccando sul link.</p>
                 <a href="#">Leggi l'articolo</a>
             </div>
             <div class="article-card">
-                <img src="https://via.placeholder.com/300x200" alt="Titolo articolo">
+                <img
+  src="assets/images/posts/da-cattivo-pagatore-a-cliente-affidabile.png"
+  alt="Da cattivo pagatore a cliente affidabile - guida passo passo"
+  width="300" height="200"
+  loading="lazy" decoding="async">
                 <h3>Titolo articolo 6</h3>
                 <p>Breve descrizione dell'articolo 6. Approfondisci il tema cliccando sul link.</p>
                 <a href="#">Leggi l'articolo</a>
             </div>
             <div class="article-card">
-                <img src="https://via.placeholder.com/300x200" alt="Titolo articolo">
+                <img
+  src="assets/images/posts/da-cattivo-pagatore-a-cliente-affidabile.png"
+  alt="Da cattivo pagatore a cliente affidabile - guida passo passo"
+  width="300" height="200"
+  loading="lazy" decoding="async">
                 <h3>Titolo articolo 7</h3>
                 <p>Breve descrizione dell'articolo 7. Approfondisci il tema cliccando sul link.</p>
                 <a href="#">Leggi l'articolo</a>
             </div>
             <div class="article-card">
-                <img src="https://via.placeholder.com/300x200" alt="Titolo articolo">
+                <img
+  src="assets/images/posts/da-cattivo-pagatore-a-cliente-affidabile.png"
+  alt="Da cattivo pagatore a cliente affidabile - guida passo passo"
+  width="300" height="200"
+  loading="lazy" decoding="async">
                 <h3>Titolo articolo 8</h3>
                 <p>Breve descrizione dell'articolo 8. Approfondisci il tema cliccando sul link.</p>
                 <a href="#">Leggi l'articolo</a>
             </div>
             <div class="article-card">
-                <img src="https://via.placeholder.com/300x200" alt="Titolo articolo">
+                <img
+  src="assets/images/posts/da-cattivo-pagatore-a-cliente-affidabile.png"
+  alt="Da cattivo pagatore a cliente affidabile - guida passo passo"
+  width="300" height="200"
+  loading="lazy" decoding="async">
                 <h3>Titolo articolo 9</h3>
                 <p>Breve descrizione dell'articolo 9. Approfondisci il tema cliccando sul link.</p>
                 <a href="#">Leggi l'articolo</a>
