--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
   loading="lazy" decoding="async">
                 <h3>Come Ottenere la Cancellazione dalla Centrale Rischi</h3>
                 <p>Centrale Rischi della Banca d'Italia raccoglie informazioni sui rapporti creditizi di imprese e privati.</p>
-                <a href="cancellazione-centrale-rischi">Leggi l'articolo</a>
+                <a href="visure-centrali-rischi" class="btn-leggi-articolo">Leggi l'articolo</a>
             </div>
             <div class="article-card">
                 <img
@@ -215,7 +215,7 @@
   loading="lazy" decoding="async">
                 <h3>Titolo articolo 3</h3>
                 <p>Breve descrizione dell'articolo 3. Approfondisci il tema cliccando sul link.</p>
-                <a href="cancellare-segnalazione-crif">Leggi l'articolo</a>
+                <a href="visure-centrali-rischi" class="btn-leggi-articolo">Leggi l'articolo</a>
             </div>
             <div class="article-card">
                 <img
@@ -225,7 +225,7 @@
   loading="lazy" decoding="async">
                 <h3>Titolo articolo 4</h3>
                 <p>Breve descrizione dell'articolo 4. Approfondisci il tema cliccando sul link.</p>
-                <a href="reclamo-banca-segnalazione-crif">Leggi l'articolo</a>
+                <a href="visure-centrali-rischi" class="btn-leggi-articolo">Leggi l'articolo</a>
             </div>
             <div class="article-card">
                 <img
@@ -235,7 +235,7 @@
   loading="lazy" decoding="async">
                 <h3>Titolo articolo 5</h3>
                 <p>Breve descrizione dell'articolo 5. Approfondisci il tema cliccando sul link.</p>
-                <a href="#">Leggi l'articolo</a>
+                <a href="visure-centrali-rischi" class="btn-leggi-articolo">Leggi l'articolo</a>
             </div>
             <div class="article-card">
                 <img
@@ -245,7 +245,7 @@
   loading="lazy" decoding="async">
                 <h3>Titolo articolo 6</h3>
                 <p>Breve descrizione dell'articolo 6. Approfondisci il tema cliccando sul link.</p>
-                <a href="#">Leggi l'articolo</a>
+                <a href="visure-centrali-rischi" class="btn-leggi-articolo">Leggi l'articolo</a>
             </div>
             <div class="article-card">
                 <img
@@ -255,7 +255,7 @@
   loading="lazy" decoding="async">
                 <h3>Titolo articolo 7</h3>
                 <p>Breve descrizione dell'articolo 7. Approfondisci il tema cliccando sul link.</p>
-                <a href="#">Leggi l'articolo</a>
+                <a href="visure-centrali-rischi" class="btn-leggi-articolo">Leggi l'articolo</a>
             </div>
             <div class="article-card">
                 <img
@@ -265,7 +265,7 @@
   loading="lazy" decoding="async">
                 <h3>Titolo articolo 8</h3>
                 <p>Breve descrizione dell'articolo 8. Approfondisci il tema cliccando sul link.</p>
-                <a href="#">Leggi l'articolo</a>
+                <a href="visure-centrali-rischi" class="btn-leggi-articolo">Leggi l'articolo</a>
             </div>
             <div class="article-card">
                 <img
@@ -275,7 +275,7 @@
   loading="lazy" decoding="async">
                 <h3>Titolo articolo 9</h3>
                 <p>Breve descrizione dell'articolo 9. Approfondisci il tema cliccando sul link.</p>
-                <a href="#">Leggi l'articolo</a>
+                <a href="visure-centrali-rischi" class="btn-leggi-articolo">Leggi l'articolo</a>
             </div>
         </div>
 
