--- a/index.html
+++ b/index.html
@@ -279,6 +279,19 @@
             </div>
         </div>
 
+       <!-- Widget guida -->
+        <div style="text-align: center; background-color: #f9f9f9; border: 2px solid #ddd; padding: 20px; border-radius: 12px; max-width: 500px; margin: 30px auto; font-family: Arial, sans-serif;">
+            <p style="font-size: 18px; font-weight: 500; color: #333; margin-bottom: 20px;">
+                Scarica gratis la mini guida con i 5 passi per cancellare la tua segnalazione in CRIF.<br>
+                <strong>Moduli inclusi, strategia testata, risultati visibili.</strong>
+            </p>
+            <a href="https://cancellasegnalazione.it" target="_blank" 
+               style="display: inline-block; background-color: #ffde59; color: black; text-decoration: none; padding: 14px 25px; font-size: 18px; border-radius: 8px; font-weight: bold; transition: background-color 0.3s ease;">
+                📥 Scarica guida gratuita
+            </a>
+        </div>
+    </main>
+        
         <!-- CTA WhatsApp -->
         <a class="cta-whatsapp" href="https://wa.me/393520020306?text=Ciao,%20vorrei%20ricevere%20maggiori%20informazioni%20per%20il%20mio%20stato%20creditizio">
             <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
