--- a/index.html
+++ b/index.html
@@ -92,18 +92,22 @@
             font-weight: bold;
             text-decoration: none;
         }
-        .cta-whatsapp {
-            display: inline-block;
+        .whatsapp-button {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
             background-color: #25D366;
             color: white;
-            padding: 12px 20px;
+            padding: 15px 20px;
+            border-radius: 50px;
             text-decoration: none;
-            border-radius: 8px;
             font-weight: bold;
-            margin: 40px auto;
-            display: block;
-            text-align: center;
-            width: fit-content;
+            box-shadow: 0 4px 20px rgba(37, 211, 102, 0.4);
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            z-index: 1000;
         }
         .cta-whatsapp img {
             vertical-align: middle;
