guida-completa-alle-visure-centrali-rischi.html

--- a/guida-completa-alle-visure-centrali-rischi.html
+++ b/guida-completa-alle-visure-centrali-rischi.html
@@ -64,7 +64,8 @@
         }
       ]
     }
-    <style>
+    </script>
+        <style>
         * {
             margin: 0;
             padding: 0;
