guida-completa-alle-visure-centrali-rischi.html

--- a/guida-completa-alle-visure-centrali-rischi.html
+++ b/guida-completa-alle-visure-centrali-rischi.html
@@ -619,23 +619,12 @@
     <footer>
         <div class="container">
             <div class="footer-content">
-                <div class="footer-section">
-                    <h3>Cancella Segnalazione</h3>
-                    <p>Esperti nella risoluzione di problematiche creditizie e nella cancellazione di segnalazioni negative dalle centrali rischi.</p>
-                </div>
-                <div class="footer-section">
-                    <h3>Servizi</h3>
-                    <p><a href="#">Cancellazione Segnalazioni CRIF</a></p>
-                    <p><a href="#">Riabilitazione Creditizia</a></p>
-                    <p><a href="#">Consulenza Finanziaria</a></p>
-                </div>
-                <div class="footer-section">
-                    <h3>Contatti</h3>
-                    <p>Email: info@cancellasegnalazione.it</p>
-                    <p>Telefono: +39 XXX XXX XXXX</p>
+                <img src="assets/images/logo-cancella-segnalazione-crif.png" alt="Logo Footer" class="logo">
+                <div class="header-text">
+                    <p>&copy; 2025 Cancella Segnalazione CRIF. Tutti i diritti riservati.</p>
+                    <p>Riabilitazione creditizia professionale e strategica</p>
                 </div>
             </div>
-            <p>&copy; 2025 Cancella Segnalazione. Tutti i diritti riservati.</p>
         </div>
     </footer>
 </body>
