guida-completa-alle-visure-centrali-rischi.html

--- a/guida-completa-alle-visure-centrali-rischi.html
+++ b/guida-completa-alle-visure-centrali-rischi.html
@@ -422,13 +422,25 @@
 <body>
     <header>
         <div class="container">
-            <h1>Le Centrali Rischi in Italia</h1>
-            <p class="subtitle">La tua guida completa per comprendere e gestire il tuo profilo creditizio</p>
+            <div class="header-content">
+                <img src="assets/images/logo-cancella-segnalazione-crif.png" alt="Logo Cancella Segnalazione CRIF" class="logo">
+                <div class="header-text">
+                    <h1>Le centrali rischi in Italia</h1>
+                    <p class="subtitle">La tua guida completa per comprendere e gestire il tuo profilo creditizio</p>
+                </div>
+            </div>
         </div>
     </header>
 
     <main>
         <div class="container">
+            <!-- Widget immagine articolo -->
+            <div style="background-color: #ffffff; border: 2px solid #e0e0e0; border-radius: 15px; padding: 25px; margin: 30px auto; max-width: 700px; text-align: center; box-shadow: 0 4px 15px rgba(0,0,0,0.08);">
+                <img src="assets/images/posts/da-cattivo-pagatore-a-cliente-affidabile.png" 
+                     alt="Da cattivo pagatore a cliente affidabile" 
+                     style="max-width: 100%; height: auto; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
+            </div>
+            <div class="container">
             <div class="content-widget">
                 <h2>Introduzione alle Centrali Rischi</h2>
                 <p>Le Centrali Rischi rappresentano il cuore del sistema informativo creditizio italiano, fornendo agli istituti finanziari dati essenziali sulla solvibilità dei richiedenti credito. Comprendere il loro funzionamento è fondamentale per chiunque voglia accedere a finanziamenti o semplicemente monitorare la propria situazione creditizia.</p>
