guida-completa-alle-visure-centrali-rischi.html

--- a/guida-completa-alle-visure-centrali-rischi.html
+++ b/guida-completa-alle-visure-centrali-rischi.html
@@ -551,7 +551,7 @@
                 
                 <p>In questi casi, la strada più efficace è rivolgersi a professionisti specializzati nella cancellazione di segnalazioni. Questi esperti conoscono le procedure corrette e hanno esperienza nel dialogo con le varie centrali rischi per ottenere la rimozione delle informazioni non più dovute.</p>
                 
-                <a href="#" class="cta-button">Richiedi Consulenza Gratuita</a>
+                <a href="https://cancellasegnalazione.it" class="cta-button">Scarica gratuitamente la mini guida</a>
             </div>
 
             <div class="content-widget">
