mappa-del-sito.html

--- a/mappa-del-sito.html
+++ b/mappa-del-sito.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Mappa del sito: naviga facilmente tra tutte le sezioni e pagine del nostro sito.">
-  <title>Mappa del Sito</title>
+  <h1>Mappa del sito – Navigazione rapida e indice completo</h1>
+<p>Scopri la <strong>mappa del sito</strong>, il tuo indice completo per navigare facilmente tra tutte le <strong>pagine</strong> e <strong>sezioni principali</strong>. Con un elenco chiaro e organizzato per <strong>categorie</strong>, puoi accedere rapidamente alle sezioni come <strong>Chi siamo</strong>, <strong>Servizi</strong>, <strong>Blog</strong> e <strong>Contatti</strong>. Ideale per migliorare sia l’esperienza dell’utente (UX) che l’ottimizzazione SEO interna.</p>
+
   <style>
     body {
       font-family: Arial, sans-serif;
