mappa-del-sito.html

--- a/mappa-del-sito.html
+++ b/mappa-del-sito.html
@@ -84,6 +84,12 @@
         <li><a href="/blog/articolo-1">Titolo Articolo 1</a></li>
         <li><a href="/blog/articolo-2">Titolo Articolo 2</a></li>
         <li><a href="/blog/articolo-3">Titolo Articolo 3</a></li>
+        <li><a href="/blog/articolo-3">Titolo Articolo 4</a></li>
+        <li><a href="/blog/articolo-3">Titolo Articolo 5</a></li>
+        <li><a href="/blog/articolo-3">Titolo Articolo 6</a></li>
+        <li><a href="/blog/articolo-3">Titolo Articolo 7</a></li>
+        <li><a href="/blog/articolo-3">Titolo Articolo 8</a></li>
+        <li><a href="/blog/articolo-3">Titolo Articolo 9</a></li>
       </ul>
     </section>
 
