mappa-del-sito.html

--- a/mappa-del-sito.html
+++ b/mappa-del-sito.html
@@ -81,7 +81,7 @@
     <section>
       <h2>Articoli dal Blog</h2>
       <ul>
-        <li><a href="/blog/articolo-1">cancellare-segnalazione-crif</a></li>
+        <li><a href="/cancellare-segnalazione-crif">cancellare-segnalazione-crif</a></li>
         <li><a href="/blog/articolo-2">Titolo Articolo 2</a></li>
         <li><a href="/blog/articolo-3">Titolo Articolo 3</a></li>
         <li><a href="/blog/articolo-3">Titolo Articolo 4</a></li>
