--- a/index.html
+++ b/index.html
@@ -183,6 +183,24 @@
         <p>Recupera la tua libertà finanziaria con la nostra guida e assistenza personalizzata.</p>
     </section>
 
+    <section id="intro-home" style="padding:40px 20px; background-color:#ffffff; font-family:Arial, sans-serif;">
+  <div style="max-width:900px; margin:0 auto; text-align:center;">
+    <h1 style="font-size:30px; color:#333; margin-bottom:15px;">
+      Cancellare una segnalazione in CRIF o Centrale Rischi è possibile: ecco da dove iniziare
+    </h1>
+    <p style="font-size:17px; color:#555; line-height:1.6; margin-bottom:20px;">
+      Se sei stato segnalato come <strong>cattivo pagatore</strong> o nella <strong>Centrale Rischi</strong> della Banca d’Italia, 
+      sai quanto sia difficile ottenere un mutuo o un finanziamento. 
+      Noi ci siamo passati e abbiamo trovato il modo di <strong>ripulire la nostra posizione creditizia</strong>. 
+      Oggi condividiamo la nostra esperienza e le informazioni utili per aiutarti a capire <em>se e come</em> puoi fare lo stesso.
+    </p>
+    <a href="https://wa.me/393520020306" target="_blank" style="background-color:#25D366; color:#fff; padding:15px 25px; text-decoration:none; font-size:18px; border-radius:8px; font-weight:bold;">
+      💬 Scrivici subito su WhatsApp
+    </a>
+  </div>
+</section>
+
+
     <div class="widget">
         <h2>Ultimi Articoli</h2>
         <div class="articles">
