--- a/index.html
+++ b/index.html
@@ -183,23 +183,25 @@
         <p>Recupera la tua libertà finanziaria con la nostra guida e assistenza personalizzata.</p>
     </section>
 
-    <section id="intro-home" style="padding:40px 20px; background-color:#ffffff; font-family:Arial, sans-serif;">
-  <div style="max-width:900px; margin:0 auto; text-align:center;">
-    <h1 style="font-size:30px; color:#333; margin-bottom:15px;">
-      Cancellare una segnalazione in CRIF o Centrale Rischi è possibile: ecco da dove iniziare
-    </h1>
-    <p style="font-size:17px; color:#555; line-height:1.6; margin-bottom:20px;">
-      Se sei stato segnalato come <strong>cattivo pagatore</strong> o nella <strong>Centrale Rischi</strong> della Banca d’Italia, 
-      sai quanto sia difficile ottenere un mutuo o un finanziamento. 
-      Noi ci siamo passati e abbiamo trovato il modo di <strong>ripulire la nostra posizione creditizia</strong>. 
-      Oggi condividiamo la nostra esperienza e le informazioni utili per aiutarti a capire <em>se e come</em> puoi fare lo stesso.
-    </p>
-    <a href="https://wa.me/393520020306" target="_blank" style="background-color:#25D366; color:#fff; padding:15px 25px; text-decoration:none; font-size:18px; border-radius:8px; font-weight:bold;">
-      💬 Scrivici subito su WhatsApp
-    </a>
-  </div>
-</section>
+    <!-- Sezione Chi Siamo con bordo -->
+<section style="max-width: 900px; margin: 40px auto; padding: 30px; border: 1px solid #e0e0e0; border-radius: 10px; background-color: #ffffff; box-shadow: 0 2px 8px rgba(0,0,0,0.05); text-align: center;">
+  
+  <h2 style="font-size: 26px; font-weight: 700; margin-bottom: 15px; color: #333;">
+    Cancellare una segnalazione in CRIF o Centrale Rischi è possibile: ecco da dove iniziare
+  </h2>
 
+  <p style="font-size: 17px; color: #555; line-height: 1.6; margin-bottom: 25px;">
+    Se sei stato segnalato come <strong>cattivo pagatore</strong> o nella <strong>Centrale Rischi</strong> della Banca d’Italia, sai quanto sia difficile ottenere un mutuo o un finanziamento.  
+    Noi ci siamo passati e abbiamo trovato il modo di <strong>ripulire la nostra posizione creditizia</strong>.  
+    Oggi condividiamo la nostra esperienza e le informazioni utili per aiutarti a capire <em>se</em> e <em>come</em> puoi fare lo stesso.
+  </p>
+
+  <!-- Pulsante WhatsApp -->
+  <a href="https://wa.me/39XXXXXXXXXX" target="_blank" style="display: inline-block; padding: 14px 28px; background-color: #25d366; color: white; font-size: 18px; font-weight: bold; border-radius: 6px; text-decoration: none; transition: background-color 0.3s;">
+    💬 Scrivici subito su WhatsApp
+  </a>
+
+</section>
 
     <div class="widget">
         <h2>Ultimi Articoli</h2>
