--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
   </p>
 
   <!-- Pulsante WhatsApp -->
-  <a href="https://wa.me/39XXXXXXXXXX" target="_blank" style="display: inline-block; padding: 14px 28px; background-color: #25d366; color: white; font-size: 18px; font-weight: bold; border-radius: 6px; text-decoration: none; transition: background-color 0.3s;">
+  <a href="https://wa.me/393520020306" target="_blank" style="display: inline-block; padding: 14px 28px; background-color: #25d366; color: white; font-size: 18px; font-weight: bold; border-radius: 6px; text-decoration: none; transition: background-color 0.3s;">
     💬 Scrivici subito su WhatsApp
   </a>
 
