--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 <section style="max-width: 900px; margin: 40px auto; padding: 30px; border: 1px solid #e0e0e0; border-radius: 10px; background-color: #ffffff; box-shadow: 0 2px 8px rgba(0,0,0,0.05); text-align: center;">
   
   <h2 style="font-size: 26px; font-weight: 700; margin-bottom: 15px; color: #333;">
-    Cancellare una segnalazione in CRIF o Centrale Rischi è possibile: ecco da dove iniziare
+    Cancellare una segnalazione in CRIF o Centrale Rischi è possibile: ecco da dove iniziare!
   </h2>
 
   <p style="font-size: 17px; color: #555; line-height: 1.6; margin-bottom: 25px;">
