--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
   }
 }
 </style>
+<link rel="icon" href="assets/images/logo_cancella-segnalazione-crif.ico" type="image/x-icon">
 
 </head>
 <body>
