--- a/cancellazione-centrale-rischi.html
+++ b/cancellazione-centrale-rischi.html
@@ -295,6 +295,8 @@
             }
         }
     </style>
+    <link rel="icon" href="assets/images/logo_cancella-segnalazione-crif.ico" type="image/x-icon">
+
 </head>
 <body>
     <header>
