--- a/come-cancellare-una-segnalazione-in-CRIF.html
+++ b/come-cancellare-una-segnalazione-in-CRIF.html
@@ -98,6 +98,8 @@
             margin-right: 8px;
         }
     </style>
+    <link rel="icon" href="assets/images/logo_cancella-segnalazione-crif.ico" type="image/x-icon">
+
 </head>
 <body>
 
