--- a/contatti.html
+++ b/contatti.html
@@ -15,6 +15,7 @@
         footer a:hover { text-decoration:underline; }
         section { padding:20px; max-width:800px; margin:auto; }
     </style>
+    <link rel="icon" href="assets/images/logo_cancella-segnalazione-crif.ico" type="image/x-icon">
 </head>
 <body>
     <header>
