--- a/crif-cos-e-come-funziona.html
+++ b/crif-cos-e-come-funziona.html
@@ -299,6 +299,7 @@
             }
         }
     </style>
+    <link rel="icon" href="assets/images/logo_cancella-segnalazione-crif.ico" type="image/x-icon">
 </head>
 
 <body>
