da-cattivo-pagatore-cliente-affidabile.html

--- a/da-cattivo-pagatore-cliente-affidabile.html
+++ b/da-cattivo-pagatore-cliente-affidabile.html
@@ -389,6 +389,7 @@
             }
         }
     </style>
+    <link rel="icon" href="assets/images/logo_cancella-segnalazione-crif.ico" type="image/x-icon">
 </head>
 <body>
     <header>
