--- a/termini-condizioni.html
+++ b/termini-condizioni.html
@@ -15,6 +15,7 @@
         footer a:hover { text-decoration:underline; }
         section { padding:20px; max-width:900px; margin:auto; line-height:1.6; }
     </style>
+    <link rel="icon" href="assets/images/logo_cancella-segnalazione-crif.ico" type="image/x-icon">
 </head>
 <body>
     <header>
