--- a/visure-centrali-rischi.html
+++ b/visure-centrali-rischi.html
@@ -119,6 +119,7 @@
     .prefs h4{margin:0 0 8px;color:var(--text)}
     .prefs label{display:block;margin:6px 0}
   </style>
+  <link rel="icon" href="assets/images/logo_cancella-segnalazione-crif.ico" type="image/x-icon">
 </head>
 <body>
 
